[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/SimulationManager/MapManager/MapManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SimulationManager/SimulationManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SimulationManager/EntityMananger/EntityManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SimulationManager/ViewCamera/ViewCamera.tscn" type="PackedScene" id=4]

[node name="SimulationManager" type="Node2D"]
script = ExtResource( 2 )

[node name="MapManager" parent="." instance=ExtResource( 1 )]

[node name="EntityManager" parent="." instance=ExtResource( 3 )]

[node name="ViewCamera" parent="." instance=ExtResource( 4 )]
